add hl-line-mode to dashboard-mode-hook

--- a/emacs.org
+++ b/emacs.org
@@ -2112,6 +2112,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
         :ensure t
         :init (dashboard-setup-startup-hook)
         :bind ("C-c d" . dashboard-open)
+        :hook (dashboard-mode . hl-line-mode)
         :config
         (setq dashboard-banner-logo-title "Habits, not goals.")
 
