increase active/unactive mode line contrast in pure dark theme

--- a/emacs.org
+++ b/emacs.org
@@ -1866,6 +1866,7 @@ Helpful functions
 
   (defun jmn-load-pure-dark-theme()
     (load-theme 'wombat)
+    (set-face-background 'mode-line "gray44")
     (with-eval-after-load 'org
       (set-face-background 'org-block "gray10")
       (setq org-todo-keyword-faces
