--- a/emacs.org
+++ b/emacs.org
@@ -353,6 +353,7 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
   (add-hook 'dired-mode-hook 'hl-line-mode)
 
   (with-eval-after-load 'dired
+    (require 'dired-x) ;; may need to be (load "dired-x" for old versions
     (setq dired-auto-revert-buffer t)  ;; auto-revert dired when revisiting
     (setq dired-listing-switches "-agho --group-directories-first" )
     (setq find-ls-option '("-print0 | xargs -0 ls -agho" . ""))
@@ -617,12 +618,14 @@ Clear up to allow the tab-bar keybindings.
           (set-display-table-slot standard-display-table 'vertical-border (make-glyph-code ?│))))
 #+end_src
 ** MISC
-*** Suppress Async Shell Command  buffers
-When running async commands, do not pop up a buffer and display the output.
+*** Async-shell-command
 #+begin_src emacs-lisp
-(add-to-list 'display-buffer-alist '("*Async Shell Command*" display-buffer-no-window (nil)))
+   ;; Suppress Async Shell Command  buffers
+  (add-to-list 'display-buffer-alist '("*Async Shell Command*" display-buffer-no-window (nil)))
+  ;; Only have one Async Shell Command buffer and it holds most recent output
+  (setq async-shell-command-buffer 'rename-buffer)
 #+end_src
-
+*** 
 * General Development
 ** Indentation
 Guess the indentation offset and 'indent-tabs-mode' from the file using internal heuristics.
