keep compilation buffers open even if they run successfully

--- a/emacs.org
+++ b/emacs.org
@@ -1093,7 +1093,7 @@ For lsp, have pyright installed =pip install pyright=
 #+end_src
 
 The following keeps the compilation buffer if there are warnings or errors, and buries it otherwise (after 1 second). [[https://stackoverflow.com/questions/11043004/emacs-compile-buffer-auto-close][source]]
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
 (defun bury-compile-buffer-if-successful (buffer string)
  "Bury a compilation buffer if succeeded without warnings "
  (when (and
